--- a/style.css
+++ b/style.css
@@ -19,10 +19,12 @@ html {
 
 .gridCell {
   background-color: white;
-  box-sizing: border-box;
 }
 
 .gridCell:hover {
   background-color: black;
-  cursor: pointer;
+}
+
+.colorChanged {
+  background-color: black !important;
 }
