--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-body,
-html {
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -10,10 +9,18 @@ html {
   flex-direction: column;
 }
 
+button {
+  background-color: white;
+  color: black;
+  font-weight: 800;
+  border-radius: 4px;
+  margin: 5px;
+}
+
 #container {
   display: flex;
   flex-wrap: wrap;
-  height: 620px;
+  height: 610px;
   width: 644px;
 }
 
