--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   align-items: center;
   background-color: darkgray;
   flex-direction: column;
+  overflow: hidden;
 }
 
 button {
@@ -20,8 +21,8 @@ button {
 #container {
   display: flex;
   flex-wrap: wrap;
-  height: 610px;
-  width: 644px;
+  height: calc(100vh - 30px);
+  width: calc(100vh - 30px);
 }
 
 .gridCell {
